[gd_scene load_steps=6 format=3 uid="uid://ddxw2b6u1pxow"]

[ext_resource type="Script" path="res://src/inventory_slot.gd" id="1_yag86"]
[ext_resource type="Texture2D" uid="uid://d3csli70fja0p" path="res://assets/textures/item_slot_selected.png" id="2_dthmo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udm20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2cax"]
bg_color = Color(0, 1, 0.211765, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hgmgp"]
font_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[node name="InventorySlot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yag86")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SelectedRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_dthmo")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_udm20")
theme_override_styles/fill = SubResource("StyleBoxFlat_p2cax")
show_percentage = false

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 8
label_settings = SubResource("LabelSettings_hgmgp")
horizontal_alignment = 2
vertical_alignment = 2
